syntax = "proto3";

option go_package = "grpc-example-2/pb";

message SumRequest{
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumResponse{
  int32 result = 1;
}

message PNDRequest{
  int32 number = 1;
}

message PNDResponse{
  int32 result = 1;
}

message AverageRequest{
  float num = 1;
}

message AverageResponse{
  float result = 1;
}

service Calculator{
  rpc Sum(SumRequest) returns (SumResponse);
  rpc PrimeNumberDecomposition(PNDRequest) returns (stream PNDResponse);
  rpc Average(stream AverageRequest) returns (AverageResponse);
}